fixed bitton bugs for: admin_generate_receipts.html
admin_record_sales.html
assigned_orders
farmer_daily_tasks
feed_schedule
track_orders

--- a/templates/farmer_daily_tasks.html
+++ b/templates/farmer_daily_tasks.html
@@ -179,7 +179,12 @@
           </div>
         </div>
       </section>
+      <a href="{{ url_for('farmer_dashboard') }}" class="inline-block mb-4 bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
+        Back to Dashboard
+      </a>
     </main>
+
+    
   </div>
 </body>
 </html>
