--- a/templates/admin_generate_receipts.html
+++ b/templates/admin_generate_receipts.html
@@ -54,7 +54,12 @@
 
 
         <p class="text-gray-500 mt-6 text-sm">A downloadable PDF will be automatically generated for the selected sale.</p>
+        <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 mb-4 inline-block">
+            Back to Dashboard
+        </a>
+          
     </div>
+
 
 </body>
 </html>
