--- a/templates/feed_schedule.html
+++ b/templates/feed_schedule.html
@@ -189,8 +189,14 @@
             </tbody>
           </table>
         </div>
+        <a href="{{ url_for('farmer_dashboard') }}" class="inline-block mb-4 bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
+          Back to Dashboard
+        </a>
       </section>
     </main>
+
+    
   </div>
+
 </body>
 </html>
