--- a/templates/track_orders.html
+++ b/templates/track_orders.html
@@ -136,6 +136,10 @@
           <a href="{{ url_for('shop') }}" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Shop Now</a>
         </div>
       </section>
+      <a href="{{ url_for('customer_dashboard') }}" class="inline-block mb-4 bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
+        Back to Dashboard
+      </a>
+      
     </main>
   </div>
 </body>
