--- a/templates/sidebar_manager.html
+++ b/templates/sidebar_manager.html
@@ -15,7 +15,7 @@
       </a>
       <!-- <a href="{{ url_for('orders') }}" class="block text-gray-700 hover:text-green-500">Track Order</a>
       <a href="{{ url_for('admin_reported_issues') }}" class="block text-gray-700 hover:text-green-500">Reported Issues</a> -->
-      <!-- <a href="{{ url_for('manage_tasks') }}" class="block text-gray-700 hover:text-green-500">Manage Tasks</a> -->
+      <a href="{{ url_for('manage_tasks') }}" class="block text-gray-700 hover:text-green-500">Manage Tasks</a>
       <!-- <a href="{{ url_for('manage_orders') }}" class="block text-gray-700 hover:text-blue-500">Manage Orders</a> -->
       <a href="{{ url_for('logout') }}" class="block text-red-600 hover:text-red-800">Logout</a>
     </nav>
