--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -63,6 +63,10 @@
           <a href="{{ url_for('edit_user_role') }}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-center">Edit User Roles</a>
           <a href="{{ url_for('add_admin') }}" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 text-center">Add New Admin</a>
           <a href="{{ url_for('delete_users') }}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 text-center">Delete Users</a>
+          <a href="{{ url_for('employee_list') }}" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600 text-center">
+            Employee List
+          </a>
+          
         </div>
       </section>
 
