--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -80,7 +80,7 @@
             Log Egg & Meat Production
           </a>
           
-          <a href="{{ url_for('manage_feed_resources', source='admin_panel') }}" class="...">Manage Feed & Resource Logs</a>
+          <a href="{{ url_for('manage_feed_resources', source='admin_panel') }}" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600 text-center">Manage Feed & Resource Logs</a>
 
         </div>
       </section>
