--- a/templates/poultry_stock.html
+++ b/templates/poultry_stock.html
@@ -17,7 +17,7 @@
         <a href="{{ url_for('poultry_stock') }}" class="block text-gray-700 hover:text-green-500">Poultry Stock</a>
         <a href="{{ url_for('add_product') }}" class="block text-gray-700 hover:text-green-500">Add Product</a>
         <a href="{{ url_for('notifications') }}" class="block text-gray-700 hover:text-green-500">Notifications</a>
-        <a href="{{ url_for('orders') }}" class="block text-gray-700 hover:text-green-500">Track Order</a>
+        <!-- <a href="{{ url_for('orders') }}" class="block text-gray-700 hover:text-green-500">Track Order</a> -->
         <!-- Add this line for logout -->
         <a href="{{ url_for('logout') }}" class="block text-red-600 hover:text-red-800">Logout</a>
       </nav>
