--- a/templates/shop.html
+++ b/templates/shop.html
@@ -119,7 +119,8 @@
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
-        }
+        },
+        credentials: 'include'
       })
       .then(response => response.json())
       .then(data => {
