--- a/templates/admin_record_sales.html
+++ b/templates/admin_record_sales.html
@@ -84,8 +84,8 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 mb-4 inline-block">
-            Back to Dashboard
+        <a href="{{ url_for('admin_income') }}" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 mb-4 inline-block">
+            Back
         </a>
 
     </div>
