--- a/templates/farmer_daily_tasks.html
+++ b/templates/farmer_daily_tasks.html
@@ -56,6 +56,8 @@
                 <th class="py-2 px-4 border-b">Category</th>
                 <th class="py-2 px-4 border-b">Priority</th>
                 <th class="py-2 px-4 border-b">Actions</th>
+                <th class="py-2 px-4 border-b">test</th>
+
               </tr>
             </thead>
             <tbody>
@@ -180,7 +182,7 @@
         </div>
       </section>
       <a href="{{ url_for('farmer_dashboard') }}" class="inline-block mb-4 bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
-        Back to Dashboard
+        Back
       </a>
     </main>
   </div>
