--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     
     <div class="hero-text text-center text-white position-absolute top-50 start-50 translate-middle">
       <h2 class="display-5 fw-light">Welcome to the place where</h2>
-      <h1 class="display-4 fw-bold">natural flavour is born</h1>
+      <h1 class="display-4 fw-bold">Organic Products are found!</h1>
       <div class="divider my-3 mx-auto"></div>
       <p class="script-text">Discover our products</p>
     </div>
@@ -56,33 +56,33 @@
     <div class="container product-container">
       <div class="row gx-4 gy-4 justify-content-center align-items-stretch">
         <div class="col-md-3 text-center product-box box-pears p-4 rounded">
-          <h4 class="fruit-title">Pears</h4>
+          <h4 class="fruit-title">Chicken Eggs</h4>
           <img src="{{ url_for('static', filename='images/farm2-products-pic1.png') }}" class="img-fluid mb-3" alt="Pears">
-          <p class="fruit-desc">Just Bite onto some fresh juicy pears!</p>
+          <p class="fruit-desc">100% Organic! Straight from the farm!</p>
         </div>
         <div class="col-md-3 text-center product-box box-grapes p-4 rounded">
-          <h4 class="fruit-title">Grapes</h4>
+          <h4 class="fruit-title">Duck Eggs</h4>
           <img src="{{ url_for('static', filename='images/farm2-products-pic2.png') }}" class="img-fluid mb-3" alt="Grapes">
-          <p class="fruit-desc">I call it the natures candy!</p>
+          <p class="fruit-desc">100% Organic! Straight from the farm!</p>
         </div>
         <div class="col-md-3 text-center product-box box-peaches p-4 rounded">
-          <h4 class="fruit-title">Peaches</h4>
+          <h4 class="fruit-title">Quail Eggs</h4>
           <img src="{{ url_for('static', filename='images/farm2-products-pic3.png') }}" class="img-fluid mb-3" alt="Peaches">
-          <p class="fruit-desc">Did someone asked for peaches?</p>
+          <p class="fruit-desc">100% Organic! Straight from the farm!</p>
         </div>
         <div class="col-md-3 text-center product-box box-apples p-4 rounded">
-          <h4 class="fruit-title">Apples</h4>
+          <h4 class="fruit-title">Organic Chicken</h4>
           <img src="{{ url_for('static', filename='images/farm2-products-pic4.png') }}" class="img-fluid mb-3" alt="Apples">
-          <p class="fruit-desc">An apple a day keeps the doctor away</p>
+          <p class="fruit-desc">100% Organic! Straight from the farm!</p>
         </div>
       </div>
     </div>
   </section>
 
   <section class="custom-highlight-1 text-center py-5">
-    <h2><span class="display-3 fw-bold">48</span> Years of Experience</h2>
-    <h3 class="mt-5">Ut ultricies imperdiet sodales</h3>
-    <p class="mt-3">Aliquam fringilla aliquam ex sit amet elementum. Proin bibendum sollicitudin feugiat. Curabitur ut egestas justo, vitae molestie ante.</p>
+    <h2><span class="display-3 fw-bold">100+</span> Farmers</h2>
+    <h3 class="mt-5">Working in a single platform</h3>
+    <p class="mt-3">To provide you the best quality products!</p>
   </section>
 
   <section class="container py-4">
@@ -116,10 +116,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-7 text-md-start">
-          <h3>Curabitur sed iaculis dolor, non congue ligula imperdiet ante posuere</h3>
+          <h3>Freshly Picked by the Farmers</h3>
           <hr class="my-3">
-          <p>Nunc urna libero, congue porta nibh a, semper feugiat sem. Sed auctor dui eleifend, scelerisque eros ut, pellentesque nibh. Nam lacinia suscipit accumsan. Donec sodales, neque vitae rutrum convallis, nulla tortor pharetra odio, in varius ante ante sed nisi orci varius.</p>
-          <a href="https://themes.muffingroup.com/be/farm2/our-story/" class="btn custom-btn mt-3">Read More</a>
+          <p>Farmers, who are partnered with us gives values to the organic food and is dedicated to provide you with the best organic products by your doorsteps through our system!</p>
+          
         </div>
         <div class="col-md-5">
           <div class="text-center">
@@ -137,33 +137,33 @@
     <div class="row g-4 justify-content-center">
       <div class="col-md-4 icon-box">
         <img src="{{ url_for('static', filename='images/farm2-home-icon1.png') }}" alt="Icon 1">
-        <h5>Lorem ipsum</h5>
-        <p>Lorem ipsum dolor sit amet, consing eli do eiod.</p>
+        <h5>Freshly Harvested</h5>
+        <p>Straight from the tree.</p>
       </div>
       <div class="col-md-4 icon-box">
         <img src="{{ url_for('static', filename='images/farm2-home-icon2.png') }}" alt="Icon 2">
-        <h5>Velit esse</h5>
-        <p>Duis aute irure dolor in repreenderit in voluptate.</p>
+        <h5>Farmers</h5>
+        <p>Experienced Farmers are involved.</p>
       </div>
       <div class="col-md-4 icon-box">
         <img src="{{ url_for('static', filename='images/farm2-home-icon3.png') }}" alt="Icon 3">
-        <h5>Voluptate</h5>
-        <p>Aliquip ex ea commodo consequat. Duis aute irure.</p>
+        <h5>Best Quality</h5> 
+        <p>From the best quality crops!</p>
       </div>
       <div class="col-md-4 icon-box">
         <img src="{{ url_for('static', filename='images/farm2-home-icon4.png') }}" alt="Icon 4">
-        <h5>Aliquam erat</h5>
-        <p>Eaque ipsa quae ab illo inventore veritatis et quasi.</p>
+        <h5>Farm lands</h5>
+        <p>Farm Lands are well maintained.</p>
       </div>
       <div class="col-md-4 icon-box">
         <img src="{{ url_for('static', filename='images/farm2-home-icon5.png') }}"  alt="Icon 5">
-        <h5>Hendrerit nulla</h5>
-        <p>Aliquip ex ea commodo consequat. Duis aute irure.</p>
+        <h5>Processed Perfectly</h5>
+        <p>Each Products are processed perfectly.</p>
       </div>
       <div class="col-md-4 icon-box">
         <img src="{{ url_for('static', filename='images/farm2-home-icon6.png') }}" alt="Icon 6">
-        <h5>Curabitur</h5>
-        <p>Occaecat cupidatat non proident, sunt in.</p>
+        <h5>Delivery</h5>
+        <p>We take from farmers and deliver it to you.</p>
       </div>
     </div>
   </section>
