--- a/templates/shop.html
+++ b/templates/shop.html
@@ -90,11 +90,11 @@
       <!-- Pagination -->
       <div class="flex justify-center mt-6">
         <nav class="inline-flex rounded-md shadow">
-          <a href="#" class="py-2 px-4 bg-white border border-gray-300 text-gray-500 hover:bg-gray-50">Previous</a>
+          <!-- <a href="#" class="py-2 px-4 bg-white border border-gray-300 text-gray-500 hover:bg-gray-50">Previous</a>
           <a href="#" class="py-2 px-4 bg-green-500 border border-green-500 text-white">1</a>
           <a href="#" class="py-2 px-4 bg-white border border-gray-300 text-gray-500 hover:bg-gray-50">2</a>
           <a href="#" class="py-2 px-4 bg-white border border-gray-300 text-gray-500 hover:bg-gray-50">3</a>
-          <a href="#" class="py-2 px-4 bg-white border border-gray-300 text-gray-500 hover:bg-gray-50">Next</a>
+          <a href="#" class="py-2 px-4 bg-white border border-gray-300 text-gray-500 hover:bg-gray-50">Next</a> -->
         </nav>
       </div>
     </main>
