--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -82,7 +82,7 @@
       </div>
     
       <div class="flex space-x-4">
-        <a href="/" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">Cancel</a>
+        <!-- <a href="/" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">Cancel</a> -->
         <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Update Profile</button>
       </div>
     </form>
