--- a/templates/view_order_details.html
+++ b/templates/view_order_details.html
@@ -31,7 +31,7 @@
         </div>
         <div>
           <a href="{{ url_for('assigned_orders') }}" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-            Back to Orders
+            Back
           </a>
         </div>
       </header>
