--- a/templates/admin_manage_salary.html
+++ b/templates/admin_manage_salary.html
@@ -122,7 +122,7 @@
 
     </div>
     <a href="{{ url_for('admin_income') }}"class="inline-block bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400 mb-4">
-     &larr; Back
+      Back
     </a>
 
 </body>
